Fixed linking error

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,10 @@
-﻿add_executable(foo test.cpp)
-
+﻿add_executable(foo "")
+add_test(test foo)
+target_sources(
+	foo
+		PRIVATE
+		test.cpp
+)
 
 target_link_libraries(foo NumCpp)
 include_directories(${INCLUDE_DIR})
